# echo-tauri

./: .gitignore  README.md  fix.diff  index.html  meet.html  overlay.html  package-lock.json  package.json  prompt.html  scripts-sync-meet-ui.sh  toast.html  tsconfig.json  vite.config.ts
.github/workflows/: build-check.yml  pr-check.yml  release.yml  sync-meet-ui.yml  win-check.yml
docs/: ROADMAP.md  SIGNING.md  cleanup-latency-baseline.md
docs/legal/: DATENSCHUTZ.md  EULA.md  THIRD-PARTY-npm.md  THIRD-PARTY-rust.md  THIRD-PARTY.md
meet-ui/: App.tsx  MeetApp.tsx  store.tsx
meet-ui/components/: Chrome.tsx  MuteButton.tsx  RecapModal.tsx
meet-ui/lib/: api.ts  auth.ts  format.ts  i18n.tsx  markdown.ts  offlineBuffer.ts  recorder.ts  theme.ts
meet-ui/screens/: Ended.tsx  Enroll.tsx  Guest.tsx  Host.tsx  HostLogin.tsx  Join.tsx  Landing.tsx  Login.tsx  Waiting.tsx  Welcome.tsx
meet-ui/styles/: meet.css
scripts/: live-test-center.sh  sync-meet-core.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/benches/: auto_mode_bench.rs
src-tauri/capabilities/: default.json
src-tauri/crates/meet-core/: Cargo.toml  VENDORED.md
src-tauri/crates/meet-core/src/: digits.rs  embedder.rs  fbank.rs  lib.rs  matching.rs  params.json  params.rs
src-tauri/crates/meet-core/tests/: digits.rs  embedder_parity.rs  golden_replay.rs  matching_synthetic.rs
src-tauri/data/: .gitignore  gen_rarity.py  requirements.txt
src-tauri/src/: analysis.rs  auth.rs  auto_mode.rs  autovocab.rs  cleanup.rs  commands.rs  config.rs  dach.rs  de_comma.rs  diarize.rs  dojo.rs  events.rs  hardware.rs  help.rs  hold_guard.rs  hold_key.rs  hotkey.rs  http.rs  inject.rs  intro.rs  kata.rs  lib.rs  live_ws.rs  loopback.rs  meet.rs  meet_local.rs  meeting_capture.rs  meeting_detect.rs  models.rs  notes.rs  notes_sync.rs  overlay.rs  presets.rs  presets_sync.rs  prompt_coach.rs  prompt_console.rs  rarity.rs  recorder.rs  sound.rs  speech_profile.rs  (+6 more)
src-tauri/src/meet_local/: capture.rs  engine.rs  incremental.rs  mod.rs  model_fetch.rs  pcm_store.rs  whisper_window.rs
src-tauri/src/transcribe/: cloud.rs  local.rs  mod.rs  opus_enc.rs  stream.rs  vocab.rs
src/components/: Avatar.tsx  BigModeSwitch.tsx  BrandMark.tsx  Changelog.tsx  ChladniLoader.tsx  ConfirmDialog.tsx  Header.tsx  HeaderUpdate.tsx  HotkeyCapture.tsx  HotkeyKeyboard.tsx  MeetingPrompt.tsx  MemberProfile.tsx  ModelManager.tsx  Postfach.tsx  RecordPanel.tsx  SessionBanner.tsx  Sidebar.tsx  SoundFx.tsx  StreamingSwitch.tsx  TierRing.tsx  Toggle.tsx  UpdatePrompt.tsx  VoiceprintFigure.tsx  VoiceprintPanel.tsx  WhatsNew.tsx  XpBanner.tsx  hotkey-keyboard.css  icons.tsx
src/components/charts/: AreaChart.tsx  BarChart.tsx  EchoWrapped.tsx  HourlyChart.tsx  ProgressRing.tsx  RadarChart.tsx  Sparkline.tsx  WordCloud.tsx  useMeasuredWidth.ts
src/components/dojo/: BrushDivider.tsx  DojoStage.tsx  HankoSeal.tsx  KataPath.tsx  ObiBelt.tsx
src/i18n/: index.ts
src/i18n/locales/: ar.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  fa.json  fi.json  fr.json  he.json  hi.json  hr.json  hu.json  id.json  it.json  ja.json  ko.json  ms.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  ta.json  th.json  tr.json  uk.json  ur.json  vi.json  zh.json
src/intro/: Intro.tsx  VirtualKeyboard.tsx  VoiceCanvas.tsx  intro.css  useReducedMotion.ts  useTypewriter.ts
src/intro/scenes/: Account.tsx  Finale.tsx  Hotkey.tsx  Mic.tsx  Mode.tsx  Opening.tsx
src/lib/: changelog.ts  exportActivity.ts  faq.ts  hotkeys.ts  insights.ts  ipc.ts  languages.ts  level.ts  notes.ts  sounds.ts
src/meet/: main.tsx
src/overlay/: Bubble.tsx  Orb.tsx  OrbCanvas.tsx  OverlayRoot.tsx  main.tsx  orbRender.ts  overlay.css
src/prompt/: PromptConsole.tsx  main.tsx  prompt.css
src/sections/: Activity.tsx  Help.tsx  History.tsx  Home.tsx  Learning.tsx  MeetLive.tsx  MeetLocal.tsx  Meetings.tsx  Notes.tsx  Onboarding.tsx  Settings.tsx  Vocabulary.tsx  meet-embed.css
src/sections/meet/: CloudEnded.tsx  CloudEnroll.tsx  CloudGuest.tsx  CloudJoin.tsx  CloudLanding.tsx  CloudRoom.tsx  CloudSetup.tsx  CloudWaiting.tsx  MeetCloud.tsx
src/state/: ConfigContext.tsx  ToastContext.tsx
src/styles/: activity.css  app.css  dojo.css  meet.css  tokens.css  xpbanner.css
src/toast/: ToastRoot.tsx  main.tsx  toast.css
