[package]
name = "echo"
version = "0.1.0"
description = "Echo — Hotkey dictation & meeting capture (Tauri rewrite)"
authors = ["Subunit UG"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (Windows quirk,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
dirs = "5"
once_cell = "1"
log = "0.4"
# Audio capture (cpal) — alsa on Linux, WASAPI on Windows, CoreAudio on macOS.
cpal = "0.15"
# WAV encoding for the cloud multipart upload.
hound = "3"
# Vocabulary post-replace (whole-word, case-insensitive).
regex = "1"
# Synthetic input (paste-back / Unicode-type) + clipboard.
enigo = "0.2"
arboard = "3"
# OAuth loopback CSRF state + JWT email claim decode.
rand = "0.8"
base64 = "0.22"
# HTTP client (rustls — no OpenSSL link, avoids the Win-ARM `requests`/urllib3
# WSAEACCES class of bugs that plagued the Python build).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json", "blocking"] }

# Local Whisper (whisper.cpp via whisper-rs) is feature-gated: enabling it
# triggers the whisper.cpp C++ build. Wired in transcribe/local.rs.
# [dependencies.whisper-rs] added together with the local-whisper feature.

[features]
default = []
