[package]
name = "echo"
version = "0.5.128"
description = "Echo — Hotkey dictation & meeting capture (Tauri rewrite)"
authors = ["Subunit UG"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (Windows quirk,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for the transparent orb overlay window on macOS
# (WebviewWindowBuilder::transparent is gated behind it). Uses private Apple APIs →
# not App Store eligible, fine for internal/unsigned distribution.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
# Native reward notifications (learning gamification) — Echo is backgrounded
# while the user dictates into another app, so a toast alone would go unseen.
tauri-plugin-notification = "2"
# File + stdout logging (diagnostics — esp. the paste-back path on Win-ARM).
tauri-plugin-log = "2"
# Crash/error reporting (rustls transport — no OpenSSL). No-op without a DSN.
sentry = { version = "0.34", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Geteilte Meet-Diarisierungs-Pipeline (Naming-Kette + Check-In-Digits).
# VENDORED aus subunit-ai/meet-core — NIE hier editieren, nur via
# scripts/sync-meet-core.sh aktualisieren (siehe crates/meet-core/VENDORED.md).
meet-core = { path = "crates/meet-core" }
# md5-Verifikation des wespeaker-ONNX-Downloads (lokales Meet-Backend).
md5 = { version = "0.7", optional = true }
parking_lot = "0.12"
dirs = "5"
once_cell = "1"
log = "0.4"
# Audio capture (cpal) — alsa on Linux, WASAPI on Windows, CoreAudio on macOS.
cpal = "0.15"
# WAV encoding for the cloud multipart upload.
hound = "3"
# Native playback of the record-start cue. The webview's AudioContext suspends
# whenever the main window is hidden to the tray (WebKit pauses hidden pages),
# which delayed the old webview-played cue; playing it natively makes it instant
# regardless of window state. `wav`-only (reuses hound, no extra decoders); 0.19
# matches the cpal 0.15 already in the tree. See sound.rs.
rodio = { version = "0.19", default-features = false, features = ["wav"] }
# Vocabulary post-replace (whole-word, case-insensitive).
regex = "1"
# Synthetic input (paste-back / Unicode-type) + clipboard.
enigo = "0.2"
arboard = "3"
# Opus speech compression for cloud uploads (~8× smaller again than the 16 kHz
# WAV, ASR-transparent). ALL platforms incl. Windows ARM64 (Erik): `opusic-sys`
# builds libopus from its vendored source via CMake (default `bundled` feature)
# and links it STATICALLY — so the shipped app is self-contained and CMake (which
# CI already has for whisper.cpp, with clang-cl on Win-ARM) handles every target,
# unlike audiopus_sys (autotools on unix, dynamic prebuilt DLL on Windows, no
# ARM64). `ogg` is the pure-Rust container muxer. Raw FFI — see opus_enc.rs.
opusic-sys = "0.7"
ogg = "0.9"
# OAuth loopback CSRF state + JWT email claim decode.
rand = "0.8"
base64 = "0.22"
# HTTP client (rustls — no OpenSSL link, avoids the Win-ARM `requests`/urllib3
# WSAEACCES class of bugs that plagued the Python build).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json", "blocking", "stream"] }
# Live dictation streaming: blocking WS client for /v1/dictate (rustls — the
# same no-OpenSSL stack as reqwest, incl. matching webpki roots).
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
# Async runtime (model downloads, meeting auto-detect, overlay timers).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "fs"] }
# Hardware probe (RAM/cores) for the recommended local-model hint.
sysinfo = { version = "0.31", default-features = false, features = ["system"] }
# History + meetings store (~/.config/echo/echo.db). `bundled` compiles SQLite
# from source — no system lib needed, works on every target incl. Windows ARM64.
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2.5.1"

# Local Whisper (whisper.cpp via whisper-rs) is feature-gated: enabling it
# triggers the whisper.cpp C++ build. Wired in transcribe/local.rs.
[dependencies.whisper-rs]
version = "0.16"
optional = true

# Windows-only: capture + refocus the foreground window for target-locked
# paste-back (inject.rs). Linux uses xdotool; macOS reads the frontmost
# app/window via core-graphics' CGWindowList (no refocus needed there).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  # Native synthetic keyboard input (SendInput) — replaces enigo on the Win-ARM
  # paste-back path, where its non-atomic 3-call Ctrl+V chord raced (double-paste
  # / bare "v"). See inject.rs `win` module.
  "Win32_UI_Input_KeyboardAndMouse",
  # Foreground process exe name for Auto-Mode (OpenProcess +
  # QueryFullProcessImageNameW) — the robust app signal on Windows. See
  # inject.rs `win_process_name`.
  "Win32_System_Threading",
] }
# System-audio loopback capture for meeting recording (the "other side" of a
# Teams/Zoom/Meet call). The `wasapi` crate wraps the Core Audio COM dance
# (IMMDeviceEnumerator → render endpoint → IAudioClient w/ LOOPBACK → capture)
# far more safely than hand-rolled `windows`-crate COM. Windows-only; see loopback.rs.
wasapi = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
# Native CGEvent paste chord — a real Cmd+V (keycode + Command flag on one event),
# instead of enigo's racy 3-call chord that can land a bare "v". Matches core-foundation
# 0.9 (already in the enigo dependency tree).
core-graphics = "0.23"
# Raise the orb overlay's NSWindow level above floating/Dock + join all Spaces so
# it's ALWAYS the frontmost layer (Tauri's always_on_top only reaches floating
# level). One msg_send in overlay::pin_topmost; objc is already in the macOS tree.
objc = "0.2"
# Runtime vibrancy toggle for the prompt terminal's genie animation: tauri's
# set_effects(None) can't REMOVE the NSVisualEffectView on macOS (only Windows
# implements clear), so prompt_console drives apply/clear directly. Same
# version tauri already resolves — no new dependency tree.
window-vibrancy = "0.6"

[features]
default = []
# On-device whisper.cpp engine (CPU). Makes the LOCAL mode work everywhere.
local-whisper = ["dep:whisper-rs"]
# Adds the Vulkan GPU backend on top (GPU accel on NVIDIA/AMD/Intel/ARM-Adreno,
# CPU fallback, binary still loads without a GPU — unlike CUDA). Needs the
# Vulkan SDK + glslc at build time.
local-whisper-gpu = ["local-whisper", "whisper-rs/vulkan"]
# Lokales Meet-Backend (Pro): komplette Pod-Pipeline auf dem Gerät —
# whisper.cpp + wespeaker-Voiceprints (meet-core/embedder zieht ort/onnxruntime-
# Binaries!). OPT-IN pro Plattform: erst in Release-Builds aktivieren, wenn die
# ort-Binaries dort CI-verifiziert sind (Win-ARM!).
local-meet = ["local-whisper", "meet-core/embedder", "dep:md5"]

[dev-dependencies]
# E2E resume tests only: SO_LINGER(0) forces a TCP RST on drop — the "network
# died hard" a FIN-drop can't simulate (the server's final send would still
# succeed into a half-closed socket and nothing would get parked).
socket2 = "0.5"
