[package]
name = "meet-core"
version = "0.1.0"
edition = "2021"
description = "Geteilte Meet-Diarisierungs-Pipeline (Naming-Kette + Stimm-Check-In-Digits) — Rust-Port, verhaltensgleich zu python/meet_core"
license = "UNLICENSED"
publish = false

[lib]
name = "meet_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order: Replay-Fixtures sind JSON-Objekte, deren Anker-Reihenfolge
# der Python-Referenz (dict-Insertion-Order) entsprechen muss.
serde_json = { version = "1", features = ["preserve_order"] }
